<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.chip.ChipGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:id="@+id/chip_group_filter"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:text="@string/chip_txt_active_coins"
            android:layout_height="wrap_content"
            android:id="@+id/chip1"
            />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:text="@string/chip_txt_inactive_coins"
            android:layout_height="wrap_content"
            android:id="@+id/chip2"
            />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:text="@string/chip_txt_only_tokens"
            android:layout_height="wrap_content"
            android:id="@+id/chip3"
            />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:text="@string/chip_txt_only_coins"
            android:layout_height="wrap_content"
            android:id="@+id/chip4"
            />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:text="@string/chip_txt_new_coins"
            android:layout_height="wrap_content"
            android:id="@+id/chip5"
            />
    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>